# Employee-Management-System/src/main/java/com/employeemanagement/controller/EmployeeController.java
@@ -1,9 +1,10 @@
 package com.employeemanagement.controller;
 
 
+import com.employeemanagement.exceptionhandling.AccessForbiddenException;
 import com.employeemanagement.exceptionhandling.NoEmployeeException;
 import com.employeemanagement.model.Employee;
-import com.employeemanagement.model.ResponseObject;
+import com.employeemanagement.dto.ResponseObject;
 import com.employeemanagement.service.EmployeeService;
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.Min;
@@ -18,22 +19,21 @@ import java.util.List;
 
 
 @Validated
-@CrossOrigin(origins = "*")
 @RestController
+@CrossOrigin(origins = "*")
 @RequestMapping("/api")
 public class EmployeeController {
 
     @Autowired
     private EmployeeService service;
 
-
-   // /employees?page=0&size=10&sort=name,asc
+    // /employees?page=0&size=10&sort=name,asc
 
     @GetMapping("/employees")
-    public ResponseEntity<ResponseObject<List<Employee>>> getAllEmployees( @RequestParam(defaultValue = "0") @Min(value = 0, message = "Page must be 0 or greater") int page,
-                                                                           @RequestParam(defaultValue = "10") @Min(value = 1, message = "Size must be at least 1") int size,
-                                                                           @RequestParam(defaultValue = "name,asc") @Pattern(regexp = "^(id|name|department|age|salary),(asc|desc)$", message = "Invalid sort format. Use 'field,asc' or 'field,desc'") String sort){
-        List<Employee> employees = service.getAllEmployees(page,size,sort);
+    public ResponseEntity<ResponseObject<List<Employee>>> getAllEmployees(@RequestParam(defaultValue = "0") @Min(value = 0, message = "Page must be 0 or greater") int page,
+                                                                          @RequestParam(defaultValue = "10") @Min(value = 1, message = "Size must be at least 1") int size,
+                                                                          @RequestParam(defaultValue = "name,asc") @Pattern(regexp = "^(id|name|department|age|salary),(asc|desc)$", message = "Invalid sort format. Use 'field,asc' or 'field,desc'") String sort) {
+        List<Employee> employees = service.getAllEmployees(page, size, sort);
         ResponseObject<List<Employee>> response = new ResponseObject<>(true, 200, "Successful Request", employees);
         return new ResponseEntity<>(response, HttpStatus.OK);
 
@@ -44,7 +44,7 @@ public class EmployeeController {
     public ResponseEntity<ResponseObject<Employee>> addEmployeeById(@Valid @RequestBody Employee emp) throws NoEmployeeException {
 
         Employee newEmployee = service.addEmployee(emp);
-        ResponseObject<Employee> response = new ResponseObject<>(true, 200, "Employee added successfully", newEmployee);
+        ResponseObject<Employee> response = new ResponseObject<>(true, 201, "Employee added successfully", newEmployee);
         return new ResponseEntity<>(response, HttpStatus.CREATED);
 
     }
@@ -53,25 +53,23 @@ public class EmployeeController {
     public ResponseEntity<ResponseObject<Employee>> getEmployeeById(@PathVariable Long id) throws NoEmployeeException {
 
         Employee employee = service.getEmployeeById(id);
-        ResponseObject<Employee> response = new  ResponseObject<>(true, 200, "Successful Request", employee);
+        ResponseObject<Employee> response = new ResponseObject<>(true, 200, "Successful Request", employee);
         return new ResponseEntity<>(response, HttpStatus.OK);
 
     }
 
     @PutMapping("/employees/{id}")
-    public ResponseEntity<ResponseObject<Employee>> updateEmployeeById(@PathVariable Long id, @Valid @RequestBody Employee emp) throws NoEmployeeException {
+    public ResponseEntity<ResponseObject<Employee>> updateEmployeeById(@PathVariable Long id, @Valid @RequestBody Employee emp) throws NoEmployeeException, AccessForbiddenException {
 
         Employee updatedEmployee = service.updateEmployeeById(id, emp);
         ResponseObject<Employee> response = new ResponseObject<>(true, 200, "Employee updated successfully", updatedEmployee);
         return new ResponseEntity<>(response, HttpStatus.OK);
-
     }
-
 
     @DeleteMapping("/employees/{id}")
     public ResponseEntity<ResponseObject<String>> deleteEmployeeById(@PathVariable Long id) throws NoEmployeeException {
         String result = service.deleteEmployeeById(id);
-        ResponseObject<String> response = new  ResponseObject<>(true, 200, "Successful Request");
+        ResponseObject<String> response = new ResponseObject<>(true, 200, "Successful Request");
         return new ResponseEntity<>(response, HttpStatus.OK);
 
     }
@@ -79,7 +77,7 @@ public class EmployeeController {
 //    /employees/search?query={searchTerm}
 
     @GetMapping("/employees/search")
-    public ResponseEntity<ResponseObject<List<Employee>>> searchEmployees(@RequestParam String query){
+    public ResponseEntity<ResponseObject<List<Employee>>> searchEmployees(@RequestParam String query) {
         List<Employee> employees = service.searchEmployees(query);
         ResponseObject<List<Employee>> response = new ResponseObject<>(true, 200, "Successful Request", employees);
         return new ResponseEntity<>(response, HttpStatus.OK);
